# xnb

./: Cargo.toml  README.md
src/: error.rs  headers.rs  lib.rs  xnb_reader.rs
src/net/: mod.rs  string.rs  varint.rs
src/object_readers/: mod.rs  texture2d.rs
tests/: abigail.rs  arrows.rs  arrows.xnb
