[package]
name = "xnb"
version = "0.1.0"
edition = "2021"
authors = ["Romet Tagobert <sgzfxn@gmail.com>"]
categories = []
description = "A naive XNB parser with custom content reader support"
homepage = "https://github.com/amPerl/xnb"
repository = "https://github.com/amPerl/xnb"
license = "MIT"
readme = "README.md"
exclude = [
    "tests/*"
]


[dependencies]
binrw = "0.8.0"
lzxd = "0.1.4"
thiserror = "1.0.30"
